--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -193,7 +193,7 @@
 		.date {
 			font-size: 3.125rem;
 			font-weight: 700;
-			font-family: $font-family-sans-serif-alt;
+			font-family: $font-family-sans-serif;
 			font-style: normal;
 			margin: 0;
 		}
@@ -224,7 +224,7 @@
 	}
 	.date {
 		display: block;
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		font-style: italic;
 		font-weight: 900;
 		font-size: 8.75rem;
@@ -326,7 +326,7 @@
 		margin: 0;
 		text-transform: uppercase;
 		letter-spacing: .1em;
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		font-size: 1rem;
 		font-weight: 700;
 		line-height: $line-height-sm;
@@ -534,7 +534,7 @@
 		margin-bottom: .5rem;
 	}
 	.entry-type {
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		text-transform: uppercase;
 		line-height: $line-height-sm;
 		letter-spacing: .1em;
