--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -115,8 +115,8 @@ $component-active-bg:         $blue !default;
 
 // Typography
 
-$font-family-sans-serif:      "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-sans-serif-alt:  "proxima-nova", #{$font-family-sans-serif} !default;
+$font-family-sans-serif:      "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif-alt:  "semplicitapro", #{$font-family-sans-serif} !default;
 $font-family-serif:           "utopia-std", serif;
 
 $font-size-base:              1.25rem !default; // Assumes the browser default, typically `16px`
@@ -143,7 +143,7 @@ $h5-font-size:                1.5rem !default;
 $h6-font-size:                1.25rem !default;
 
 $headings-margin-bottom:      1rem !default;
-$headings-font-family:        $font-family-sans-serif !default;
+$headings-font-family:        $font-family-sans-serif-alt !default;
 $headings-font-weight:        $font-weight-bold !default;
 $headings-line-height:        1.2 !default;
 $headings-color:              null !default;
