--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-family: $font-family-sans-serif-alt;
+	font-family: $font-family-sans-serif;
 	text-transform: uppercase;
 	font-weight: 800;
 	line-height: 1.1;
