--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -174,7 +174,7 @@ body {
 #site-footer-host-logos {
 	margin-top: 1rem;
 	.intro {
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		font-size: 1rem;
 	}
 	.logos {
@@ -253,7 +253,7 @@ body {
 	.widget {
 		margin-bottom: 2rem;
 		font-size: 1.125rem;
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		color: mix($body-color, $ghost, 60%);
 		.widget-title {
 			margin-bottom: .5rem;
@@ -349,7 +349,7 @@ body {
 #site-description {
 	font-size: 0.75rem;
 	color: mix($body-color, $ghost, 40%);
-	font-family: $font-family-sans-serif-alt;
+	font-family: $font-family-sans-serif;
 	text-align: center;
 	max-width: 720px;
 	@include media-breakpoint-up(lg) {
@@ -425,7 +425,7 @@ body {
 	flex: 0 0 100%;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
-	font-family: $font-family-sans-serif-alt;
+	font-family: $font-family-sans-serif;
 	text-align: center;
 	@include media-breakpoint-up(md) {
 		flex: 1 1 auto;
@@ -448,7 +448,7 @@ body {
 	flex: 0 0 100%;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
-	font-family: $font-family-sans-serif-alt;
+	font-family: $font-family-sans-serif;
 	text-align: center;
 	@include media-breakpoint-up(md) {
 		flex: 0 0 auto;
