--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -48,6 +48,9 @@ h1 {
 .is-style-sans-serif {
 	font-family: $font-family-sans-serif;
 }
+.is-style-sans-serif-alt {
+	font-family: $font-family-sans-serif-alt;
+}
 .is-style-serif {
 	font-family: $font-family-serif;
 }
