--- a/wp-content/plugins/crown-blocks/src/block-section-nav-content/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-section-nav-content/editor.scss
@@ -35,6 +35,12 @@
 			.text-color-dark & {
 				border-color: fade-out(#000, .6);
 			}
+			> .inner > .block-editor-inner-blocks > .block-editor-block-list__layout > .wp-block {
+				margin: 0;
+				&.block-list-appender {
+					margin-top: 8px;
+				}
+			}
 		}
 	}
 }
