--- a/wp-content/plugins/crown-blocks/src/block-section-nav-content/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-section-nav-content/style.scss
@@ -2,4 +2,9 @@
 
 .wp-block-crown-blocks-section-nav-content {
 	margin: 0;
+	> .inner > .section-nav-content-contents {
+		> .inner > .wp-block-crown-blocks-container {
+			margin: 0;
+		}
+	}
 }
