--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -97,6 +97,37 @@
 }
 
 
+/*	Multi-Column
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-multi-column {
+	&.relative-to-container-width {
+		> .inner {
+			> .multi-column-columns {
+				max-width: $container-effective-max-width;
+				margin: 0 auto;
+				@media (min-width: $container-effective-max-width) {
+					> .inner {
+						> .wp-block-crown-blocks-column:nth-child(1) {
+							> .inner > .column-contents > .inner > .wp-block-crown-blocks-container {
+								margin-left: calc((100vw - #{$container-effective-max-width}) / -2);
+								padding-left: calc((100vw - #{$container-effective-max-width}) / 2);
+							}
+						}
+						> .wp-block-crown-blocks-column:nth-child(2) {
+							> .inner > .column-contents > .inner > .wp-block-crown-blocks-container {
+								margin-right: calc((100vw - #{$container-effective-max-width}) / -2);
+								padding-right: calc((100vw - #{$container-effective-max-width}) / 2);
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+
 /*	Section Nav
 ---------------------------------------------------------*/
 
@@ -144,6 +175,14 @@
 			position: sticky;
 			top: 0;
 			z-index: 499;
+		}
+		body.admin-bar & {
+			@media (min-width: 768px) {
+				top: 46px;
+			}
+			@media (min-width: 783px) {
+				top: 32px;
+			}
 		}
 		> .inner {
 			@include media-breakpoint-up(md) {
@@ -199,8 +238,26 @@
 			}
 			li {
 				margin-top: 1rem;
+				position: relative;
 				@include media-breakpoint-up(md) {
 					margin: 0 1rem 1rem;
+				}
+				&.active:before {
+					opacity: 1;
+				}
+				&:before {
+					content: '';
+					position: absolute;
+					display: none;
+					left: 0;
+					right: 0;
+					bottom: -0.25rem;
+					border-top: 0.25rem solid #fff;
+					opacity: 0;
+					transition: opacity .2s;
+					@include media-breakpoint-up(md) {
+						display: block;
+					}
 				}
 			}
 		}
@@ -210,6 +267,13 @@
 	.section-nav-content-title {
 		display: none;
 	}
+	// .wp-block-crown-blocks-multi-column {
+	// 	&.column-breakpoint-xs > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { min-height: 100vh; }
+	// 	&.column-breakpoint-sm > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(sm) { min-height: 100vh; } }
+	// 	&.column-breakpoint-md > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(md) { min-height: 100vh; } }
+	// 	&.column-breakpoint-lg > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(lg) { min-height: 100vh; } }
+	// 	&.column-breakpoint-xl > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(xl) { min-height: 100vh; } }
+	// }
 }
 
 
