--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -267,13 +267,12 @@
 	.section-nav-content-title {
 		display: none;
 	}
-	// .wp-block-crown-blocks-multi-column {
-	// 	&.column-breakpoint-xs > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { min-height: 100vh; }
-	// 	&.column-breakpoint-sm > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(sm) { min-height: 100vh; } }
-	// 	&.column-breakpoint-md > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(md) { min-height: 100vh; } }
-	// 	&.column-breakpoint-lg > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(lg) { min-height: 100vh; } }
-	// 	&.column-breakpoint-xl > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-up(xl) { min-height: 100vh; } }
-	// }
+	.wp-block-crown-blocks-multi-column {
+		&.column-breakpoint-sm > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-down(xs) { position: static !important; min-height: 0 !important; } }
+		&.column-breakpoint-md > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-down(sm) { position: static !important; min-height: 0 !important; } }
+		&.column-breakpoint-lg > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-down(md) { position: static !important; min-height: 0 !important; } }
+		&.column-breakpoint-xl > .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column.sticky { @include media-breakpoint-down(lg) { position: static !important; min-height: 0 !important; } }
+	}
 }
 
 
@@ -1187,7 +1186,7 @@
 		margin-bottom: 0;
 		font-size: 5rem;
 		line-height: 1;
-		font-family: $font-family-sans-serif-alt;
+		font-family: $font-family-sans-serif;
 		font-weight: 800;
 		font-style: italic;
 		@include media-breakpoint-up(lg) {
@@ -1232,7 +1231,7 @@
 		}
 		.stat-value {
 			margin-bottom: 0;
-			font-family: $font-family-sans-serif-alt;
+			font-family: $font-family-sans-serif;
 			font-size: 1.75rem;
 			font-style: normal;
 			font-weight: 500;
