--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -143,7 +143,7 @@ $h5-font-size:                1.5rem !default;
 $h6-font-size:                1.25rem !default;
 
 $headings-margin-bottom:      1rem !default;
-$headings-font-family:        $font-family-sans-serif-alt !default;
+$headings-font-family:        $font-family-sans-serif !default;
 $headings-font-weight:        $font-weight-bold !default;
 $headings-line-height:        1.2 !default;
 $headings-color:              null !default;
@@ -161,7 +161,7 @@ $lead-font-weight:            $font-weight-base !default;
 
 $input-btn-padding-y:         .8rem !default;
 $input-btn-padding-x:         .8rem !default;
-$input-btn-font-family:       $font-family-sans-serif-alt !default;
+$input-btn-font-family:       $font-family-sans-serif !default;
 $input-btn-font-size:         1rem !default;
 $input-btn-line-height:       $line-height-sm !default;
 
